feat(apps/api): implement and test GetFuseLeveragedTokenChartsBySymbol
