# apps/api/openapi.yml
@@ -109,12 +109,13 @@ paths:
         500:
           description: Internal server error
 
-  /v1/{chainId}/flts/{symbol}/prices:
+  /v1/{chainId}/flts/{symbol}/charts:
     get:
       tags:
         - Fuse Leveraged Token
-      operationId: GetFuseLeveragedTokenPricesBySymbol
-      summary: Get Fuse Leveraged Token's historical price by symbol
+      operationId: GetFuseLeveragedTokenChartsBySymbol
+      summary: |
+        Get Fuse Leveraged Token's historical prices, volumes and fees by symbol
       parameters:
         - in: path
           name: chainId
@@ -128,7 +129,7 @@ paths:
           required: true
       responses:
         200:
-          description: Historical price
+          description: Fuse Leveraged Token charts data
           content:
             application/json:
               schema:
@@ -138,40 +139,14 @@ paths:
                     type: array
                     items:
                       $ref: "#/components/schemas/FuseLeveragedTokenPrice"
-        404:
-          description: Chain ID not supported
-        500:
-          description: Internal server error
-
-  /v1/{chainId}/flts/{symbol}/volumes:
-    get:
-      tags:
-        - Fuse Leveraged Token
-      operationId: GetFuseLeveragedTokenVolumesBySymbol
-      summary: Get Fuse Leveraged Token's historical trade volume by symbol
-      parameters:
-        - in: path
-          name: chainId
-          schema:
-            $ref: "#/components/schemas/ChainId"
-          required: true
-        - in: path
-          name: symbol
-          type: string
-          example: "ETHRISE"
-          required: true
-      responses:
-        200:
-          description: Historical volume
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
                   volumes:
                     type: array
                     items:
                       $ref: "#/components/schemas/FuseLeveragedTokenVolume"
+                  fees:
+                    type: array
+                    items:
+                      $ref: "#/components/schemas/FuseLeveragedTokenFee"
         404:
           description: Chain ID not supported
         500:
@@ -418,6 +393,18 @@ components:
           description: Unix timestamp in seconds
           type: number
           example: 1657868400
-        volumeUSD:
+        usd:
           description: Trade volume in USD
+          $ref: "#/components/schemas/USD"
+
+    FuseLeveragedTokenFee:
+      description: Fuse Leveraged Token's trade fee at given timestamp
+      type: object
+      properties:
+        timestamp:
+          description: Unix timestamp in seconds
+          type: number
+          example: 1657868400
+        usd:
+          description: Trade fee in USD
           $ref: "#/components/schemas/USD"
